--- a/doc/chris.bib
+++ b/doc/chris.bib
@@ -1,308 +1,308 @@
-@Book{ AndersonMoore1979,
-	title = "Optimal Filtering",
-	author = "B. D. O. Anderson and J. B. Moore",
-	publisher = "Prentice Hall",
-	address = "Englewood Cliffs",
-	year = "1979"
-}
 
 @Article{ CarterKohn1994,
-	title = "On Gibbs sampling for state space models",
-	author = "C. Carter and R. Kohn",
-	journal = "Biometrika",
-	pages = "541--553",
-	volume = "81",
-	year = "1994"
+  title =	 "On Gibbs sampling for state space models",
+  author =	 "C. Carter and R. Kohn",
+  journal =	 "Biometrika",
+  pages =	 "541--553",
+  volume =	 "81",
+  year =	 "1994"
 }
 
 @Article{ ChibGreenberg1996,
-	author = "Siddhartha Chib and Edward Greenberg",
-	title = "{M}arkov chain {M}onte {C}arlo simulation methods in {E}conometrics",
-	journal = "Econometric Theory",
-	year = "1996",
-	month = "",
-	volume = "12",
-	pages = "409--431",
-	otherinfo = ""
+  author =	 "Siddhartha Chib and Edward Greenberg",
+  title =	 "{M}arkov chain {M}onte {C}arlo simulation methods in
+                  econometrics",
+  journal =	 "Econometric Theory",
+  year =	 "1996",
+  month =	 "",
+  volume =	 "12",
+  pages =	 "409--431",
+  otherinfo =	 ""
 }
 
 @Article{ deJongShepard1995,
-	author = "Pierre de Jong and Neil Shephard",
-	title = "The simulation smoother for time series models",
-	journal = "Biometrika",
-	year = "1995",
-	month = "",
-	volume = "82",
-	pages = "339--350",
-	otherinfo = ""
+  author =	 "Pierre de Jong and Neil Shephard",
+  title =	 "The simulation smoother for time series models",
+  journal =	 "Biometrika",
+  year =	 "1995",
+  month =	 "",
+  volume =	 "82",
+  pages =	 "339--350",
+  otherinfo =	 ""
 }
 
 @Book{ FruwirthSchnatter2004,
-	title = "Efficient Bayesian parameter estimation for State Space Models Based on Reparameterisations, State Space and Unobserved Component Models: Theory and Applications",
-	author = {Sylvia Fr{\"u}wirth Schnatter},
-	publisher = "Cambridge University Press",
-	address = "Cambridge",
-	year = "2004"
+  title =	 "Efficient Bayesian parameter estimation for State
+                  Space Models Based on Reparameterisations, State
+                  Space and Unobserved Component Models: Theory and
+                  Applications",
+  author =	 {Sylvia Fr{\"u}wirth-Schnatter},
+  publisher =	 "Cambridge University Press",
+  address =	 "Cambridge",
+  year =	 "2004"
 }
 
 @Article{ F2PY,
-	author = "Pearu Peterson",
-	title = "F2PY: a tool for connecting Fortran and Python programs",
-	journal = "International Journal of Computational Science and Engineering",
-	year = "2009",
-	volume = "4",
-	pages = "296--605",
-	otherinfo = ""
+  author =	 "Pearu Peterson",
+  title =	 "\pkg{F2PY}: a tool for connecting \proglang{Fortran}
+                  and \proglang{Python} programs",
+  journal =	 "International Journal of Computational Science and
+                  Engineering",
+  year =	 "2009",
+  volume =	 "4",
+  pages =	 "296--605",
+  otherinfo =	 ""
 }
 
 @TechReport{ GarthwaiteYanScisson2010,
-	author = "P. H. Garthwaite and Yanan Fan and Scott A. Scisson",
-	title = "Adaptive optimal scaling of Metropolis-Hastings algorithms using the Robbins-Monroe process",
-	institution = "University of New South Wales",
-	year = "2010"
+  author =	 "P. H. Garthwaite and Yanan Fan and Scott A. Scisson",
+  title =	 "Adaptive optimal scaling of Metropolis-Hastings
+                  algorithms using the Robbins-Monroe process",
+  institution =	 "University of New South Wales",
+  year =	 "2010"
 }
 
 @Article{ GelfandSmith1990,
-	title = "Sampling-based approaches to calculating marginal densities",
-	author = "Alan E. Gelfand and Adrian F. M. Smith",
-	journal = "Journal of the American Statistical Association",
-	year = "1990",
-	volume = "85",
-	pages = "398--409"
+  title =	 "Sampling-based approaches to calculating marginal
+                  densities",
+  author =	 "Alan E. Gelfand and Adrian F. M. Smith",
+  journal =	 "Journal of the American Statistical Association",
+  year =	 "1990",
+  volume =	 "85",
+  pages =	 "398--409"
 }
 
 @Article{ GelfandSahuCarlin1995,
-	title = "Efficient parametrisations for normal linear mixed models",
-	author = "Alan E. Gelfand and Sujit K. Sahu and Bradley P. Carlin",
-	journal = "Biometrika",
-	pages = "479--488",
-	volume = "65",
-	number = "3",
-	year = "1995"
+  title =	 "Efficient parametrisations for normal linear mixed
+                  models",
+  author =	 "Alan E. Gelfand and Sujit K. Sahu and Bradley
+                  P. Carlin",
+  journal =	 "Biometrika",
+  pages =	 "479--488",
+  volume =	 "65",
+  number =	 "3",
+  year =	 "1995"
 }
 
 @Book{ GelmanCarlinSternRubin2004,
-	title = "Bayesian data analysis",
-	author = "Andrew Gelman and John B. Carlin and Hal S. Stern and Donald B. Rubin",
-	publisher = "Chapman and Hall/CRC",
-	address = "Florida",
-	year = "2004"
+  title =	 "Bayesian Data Analysis",
+  author =	 "Andrew Gelman and John B. Carlin and Hal S. Stern
+                  and Donald B. Rubin",
+  publisher =	 "Chapman and Hall/CRC",
+  address =	 "Florida",
+  year =	 "2004"
 }
 
 @Article{ GeorgeMcCulloch1993,
-	author = "Edward I. George and Robert E. McCulloch",
-	title = "Variable selection via Gibbs sampling",
-	journal = "Journal of the American Statistical Association",
-	year = "1993",
-	month = "",
-	volume = "88",
-	pages = "881--89",
-	otherinfo = ""
+  author =	 "Edward I. George and Robert E. McCulloch",
+  title =	 "Variable selection via Gibbs sampling",
+  journal =	 "Journal of the American Statistical Association",
+  year =	 "1993",
+  month =	 "",
+  volume =	 "88",
+  pages =	 "881--89",
+  otherinfo =	 ""
 }
 
 @Article{GeorgeMcCulloch1997,
-	author = "Edward I. George and Robert E. McCulloch",
-	title = "Approaches for {B}ayesian variable selection",
-	journal = "Statistica Sinica",
-	year = "1997",
-	number = "7",
-	pages = "339-373",
-}
-
-@ARTICLE{GilleyPace1996,
-	author = {Otis W. Gilley and R. Kelley Pace},
-	title = {On the Harrison and Rubinfeld Data},
-	journal = {Journal of Environmental Economics and Management},
-	year = {1996},
-	month = {},
-	number = {31},
-	pages = {403--405},
-	otherinfo = {}
-}
-
-@ARTICLE{HarrisonRubinfeld1978,
-	author = {David Harrison and Daniel L. Rubinfeld},
-	title = {Hedonic housing prices and the demand for clean air},
-	journal = {Journal of Environmental Economics and Management},
-	year = {1978},
-	month = {},
-	number = {5},
-	pages = {81--102},
-	otherinfo = {}
+  author =	 "Edward I. George and Robert E. McCulloch",
+  title =	 "Approaches for {B}ayesian variable selection",
+  journal =	 "Statistica Sinica",
+  year =	 "1997",
+  number =	 "7",
+  pages =	 "339-373",
 }
 
 
-	
 
 @Article{ Ipython,
-	author = "John D. Hunter",
-	title = "IPython: A System for Interactive Scientific Computing",
-	journal = "Computing in Science and Engineering",
-	year = "2007",
-	month = "",
-	number = "9",
-	pages = "21--29",
-	otherinfo = ""
+  author =	 "John D. Hunter",
+  title =	 "IPython: A System for Interactive Scientific
+                  Computing",
+  journal =	 "Computing in Science and Engineering",
+  year =	 "2007",
+  month =	 "",
+  number =	 "9",
+  pages =	 "21--29",
+  otherinfo =	 ""
 }
 
 @BOOK{JudgeHillGriffithsLutkepohlLee1988,
-	author = {George G. Judge and R. Carter Hill and William E. Griffiths and Helmut a{\"u}tkepohl and Tsoung-Chao Lee},
-	editor = {},
-	title = {Introduction to theory and practice of {E}conometrics},
-	publisher = {John Wiley \& Sons},address={New York},
-	year = {1988},
-	otherinfo = {}
+  author =	 {George G. Judge and R. Carter Hill and William
+                  E. Griffiths and Helmut a{\"u}tkepohl and
+                  Tsoung-Chao Lee},
+  editor =	 {},
+  title =	 {Introduction to theory and practice of
+                  {E}conometrics},
+  publisher =	 {John Wiley \& Sons},
+  address =	 {New York},
+  year =	 {1988},
+  otherinfo =	 {}
 }
 
 
 @Article{ KassRaftery1995,
-	author = "Robert E. Kass and Adrian E. Raftery",
-	title = "{B}ayes factors",
-	journal = "Journal of the American Statistical Association",
-	year = "1995",
-	month = "",
-	volume = "90",
-	pages = "773--795",
-	otherinfo = ""
+  author =	 "Robert E. Kass and Adrian E. Raftery",
+  title =	 "{B}ayes factors",
+  journal =	 "Journal of the American Statistical Association",
+  year =	 "1995",
+  month =	 "",
+  volume =	 "90",
+  pages =	 "773--795",
+  otherinfo =	 ""
 }
 
 @Article{ KimShephardChib1998,
-	title = "Stochastic Volatility: Likelihood Inference and Comparison with ARCH Models",
-	author = "Sangjoon Kim and Neil Shephard and Siddhartha Chib",
-	journal = "Review of Economic Studies",
-	pages = "361--393",
-	volume = "65",
-	number = "3",
-	year = "1998"
+  title =	 "Stochastic Volatility: Likelihood Inference and
+                  Comparison with ARCH Models",
+  author =	 "Sangjoon Kim and Neil Shephard and Siddhartha Chib",
+  journal =	 "Review of Economic Studies",
+  pages =	 "361--393",
+  volume =	 "65",
+  number =	 "3",
+  year =	 "1998"
 }
 
 @Book{ Koop2003,
-	title = "Bayesian Econometrics",
-	author = "Gary Koop",
-	publisher = "John Wiley \& Sons",
-	address = "West Sussex",
-	year = "2003"
+  title =	 "Bayesian Econometrics",
+  author =	 "Gary Koop",
+  publisher =	 "John Wiley \& Sons",
+  address =	 "West Sussex",
+  year =	 "2003"
 }
 
 @Article{ LuiLiangWong2000,
-	author = "F. Liang and Jun S. Lui and W. H. Wong",
-	title = "The use of multiple-try method and local optimization in Metropolis sampling",
-	journal = "Journal of the American Statistical Association",
-	year = "2000",
-	month = "",
-	volume = "95",
-	pages = "121--134",
-	otherinfo = ""
+  author =	 "F. Liang and Jun S. Lui and W. H. Wong",
+  title =	 "The use of multiple-try method and local
+                  optimization in Metropolis sampling",
+  journal =	 "Journal of the American Statistical Association",
+  year =	 "2000",
+  month =	 "",
+  volume =	 "95",
+  pages =	 "121--134",
+  otherinfo =	 ""
 }
 
 @Article{ LuiKongWong1994,
-	title = "Covariance structure of the Gibbs sampler with applications to the comparisons of estimators and augmentations schemes",
-	author = "Jun S. Lui and W. H. Wong and A. Kong",
-	journal = "Journal of the Royal Statistical Society B",
-	pages = "157--169",
-	volume = "57",
-	number = "1",
-	year = "1994"
+  title =	 "Covariance structure of the Gibbs sampler with
+                  applications to the comparisons of estimators and
+                  augmentations schemes",
+  author =	 "Jun S. Lui and W. H. Wong and A. Kong",
+  journal =	 "Journal of the Royal Statistical Society B",
+  pages =	 "157--169",
+  volume =	 "57",
+  number =	 "1",
+  year =	 "1994"
 }
 
 @Book{ MarinRobert2007,
-	author = "Jean-Michel Marin and Christian P. Robert",
-	title = {{B}ayesian core},
-	publisher = "Springer--Verlag",
-	year = "2007",address="New York",
-	otherinfo = "<++>"
+  author =	 "Jean-Michel Marin and Christian P. Robert",
+  title =	 {{B}ayesian Core},
+  publisher =	 "Springer--Verlag",
+  year =	 "2007",
+  address =	 "New York",
+  otherinfo =	 "<++>"
 }
 
 @Article{ NumpyScipy,
-	author = "Travis E. Oliphant",
-	title = "Python for Scientific Computing",
-	journal = "Computing in Science and Engineering",
-	year = "2007",
-	month = "",
-	volume = "9",
-	pages = "10--20",
-	otherinfo = ""
+  author =	 "Travis E. Oliphant",
+  title =	 "\proglang{Python} for Scientific Computing",
+  journal =	 "Computing in Science and Engineering",
+  year =	 "2007",
+  month =	 "",
+  volume =	 "9",
+  pages =	 "10--20",
+  otherinfo =	 ""
 }
 
 @Article{ Matplotlib,
-	author = "John D. Hunter",
-	title = "Matplotlib: A 2D Graphics Environment",
-	journal = "Computing in Science and Engineering",
-	year = "2007",
-	month = "",
-	volume = "9",
-	pages = "90--95",
-	otherinfo = ""
+  author =	 "John D. Hunter",
+  title =	 "\pkg{Matplotlib}: A 2D Graphics Environment",
+  journal =	 "Computing in Science and Engineering",
+  year =	 "2007",
+  month =	 "",
+  volume =	 "9",
+  pages =	 "90--95",
+  otherinfo =	 ""
 }
 
 @Article{ PittShepard1999,
-	title = "Analytic convergence rates and parameterisation issues for the Gibbs sampler applied to state space models",
-	author = "Michael Pitt and Neil Shephard",
-	journal = "Journal of Time Series Analysis",
-	pages = "63--85",
-	volume = "20",
-	year = "1999"
+  title =	 "Analytic convergence rates and parameterisation
+                  issues for the Gibbs sampler applied to state space
+                  models",
+  author =	 "Michael Pitt and Neil Shephard",
+  journal =	 "Journal of Time Series Analysis",
+  pages =	 "63--85",
+  volume =	 "20",
+  year =	 "1999"
 }
 
 @TechReport{ Python,
-	author = "Guido van Rossum",
-	title = "Python tutorial, Technical Report CS-R9526",
-	institution = "Centrum voor Wiskunde en Informatica (CWI), Amsterdam",
-	year = "1995",
-	otherinfo = ""
+  author =	 "Guido van Rossum",
+  title =	 "\proglang{Python} Tutorial, Technical Report
+                  CS-R9526",
+  institution =	 "Centrum voor Wiskunde en Informatica (CWI),
+                  Amsterdam",
+  year =	 "1995",
+  otherinfo =	 ""
 }
 
 @Manual{ R,
-	title = "R: A Language and Environment for Statistical Computing",
-	author = "{R Development Core Team}",
-	organization = "R Foundation for Statistical Computing",
-	address = "Vienna, Austria",
-	year = 2010,
-	note = "{ISBN} 3-900051-07-0",
-	url = "http://www.R-project.org"
+  title =	 "\proglang{R}: A Language and Environment for
+                  Statistical Computing",
+  author =	 "{R Development Core Team}",
+  organization = "R Foundation for Statistical Computing",
+  address =	 "Vienna, Austria",
+  year =	 2010,
+  note =	 "{ISBN} 3-900051-07-0",
+  url =		 "http://www.R-project.org"
 }
 
 @Article{ Rnews:Plummer+Best+Cowles+Vines:2006,
-	AUTHOR = "Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines",
-	TITLE = "{CODA}: Convergence Diagnosis and Output Analysis for {MCMC}",
-	JOURNAL = "R News",
-	YEAR = 2006,
-	VOLUME = 6,
-	NUMBER = 1,
-	PAGES = "7--11",
-	MONTH = "March",
-	URL = "http://CRAN.R-project.org/doc/Rnews/",
-	PDF = "http://CRAN.R-project.org/doc/Rnews/Rnews\_2006-1.pdf"
+  AUTHOR =	 "Martyn Plummer and Nicky Best and Kate Cowles and
+                  Karen Vines",
+  TITLE =	 "\pkg{CODA}: Convergence Diagnosis and Output
+                  Analysis for {MCMC}",
+  JOURNAL =	 "R News",
+  YEAR =	 2006,
+  VOLUME =	 6,
+  NUMBER =	 1,
+  PAGES =	 "7--11",
+  MONTH =	 "March",
+  URL =		 "http://CRAN.R-project.org/doc/Rnews/",
+  PDF =
+                  "http://CRAN.R-project.org/doc/Rnews/Rnews\_2006-1.pdf"
 }
 
 @Article{ Radford2003,
-	title = "Slice Sampling",
-	author = "Radford M. Neal",
-	journal = "The Annals of Statistics",
-	pages = "705--741",
-	volume = "31",
-	number = "3",
-	month = "June",
-	year = "2003"
+  title =	 "Slice sampling",
+  author =	 "Radford M. Neal",
+  journal =	 "The Annals of Statistics",
+  pages =	 "705--741",
+  volume =	 "31",
+  number =	 "3",
+  month =	 "June",
+  year =	 "2003"
 }
 
 
 @Book{ RobertCassela1999,
-	title = {Monte {C}arlo statistical methods},
-	author = "C. P. Robert and G. Casella",
-	publisher = "Springer--Verlag",
-	address = "New York",
-	year = 1999
+  title =	 {Monte {C}arlo Statistical Methods},
+  author =	 "C. P. Robert and G. Casella",
+  publisher =	 "Springer--Verlag",
+  address =	 "New York",
+  year =	 1999
 }
 
 @Article{ RobertMengersen1999,
-	title = "Reparameterisation issues in mixture modelling and their bearing on MCMC algorithms",
-	author = "Christian P. Robert and Kerrie L. Mengersen",
-	journal = "Computational Statistics and Data Analysis",
-	pages = "325--343",
-	volume = "29",
-	number = "3",
-	year = "1999"
+  title =	 "Reparameterisation issues in mixture modelling and
+                  their bearing on MCMC algorithms",
+  author =	 "Christian P. Robert and Kerrie L. Mengersen",
+  journal =	 "Computational Statistics and Data Analysis",
+  pages =	 "325--343",
+  volume =	 "29",
+  number =	 "3",
+  year =	 "1999"
 }
 
 @Article{ RobersSahu1997,
@@ -334,8 +334,8 @@
 }
 
 @Article{ StricklandMartinForbes2008,
-  title =	 "Parameterisation and Efficient MCMC Estimation of
-                  Non-Gaussian State Space Models",
+  title =	 "Parameterisation and efficient MCMC estimation of
+                  non-Gaussian state space models",
   author =	 "Chris M. Strickland and Gael M. Martin and Catherine
                   S. Forbes",
   journal =	 "Computational Statistics and Data Analysis",
@@ -346,10 +346,10 @@
 
 @Book{ Zellner1971,
   author =	 "Arnold Zellner",
-  title =	 "An introduction to {B}ayesian inference in
+  title =	 "An Introduction to {B}ayesian Inference in
                   {E}conometrics",
   publisher =	 "John Wiley \& Sons",
-  year =	 "1971",
+  year =	 1971,
   address =	 "New York",
   otherinfo =	 ""
 }
