minor modification of the output for example 3 so it agrees with the python output.

--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -1851,8 +1851,8 @@ Number of blocks in Gibbs sampler =  2
 Acceptance rate  beta  =  1.0
 Acceptance rate  sigma  =  1.0
 Acceptance rate  rho  =  1.0
-BIC =  [-331.398]
-Log likelihood =  [ 182.969]
+BIC =  -331.398
+Log likelihood =   182.969
 
 \end{CodeOutput}
 \end{CodeChunk}
