Added Robert's details to affiliations. Modified page breaking so that the figures stayed within their sections.

--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -68,19 +68,17 @@
   Queensland University of Technology\\
   Queensland, 4001, Australia\\
   E-mail: \email{ christopher.strickland@qut.edu.au}
+
+  \vspace*{5mm}
+  R. Denham\\
+  Remote Sensing Centre \\
+  Queensland Department of Environment and Resource Management\\
+  GPO Box 2454\\
+  Brisbane 4001, Australia\\
+  E-mail: \email{ robert.denham@derm.qld.gov.au}
+
 }
 
-%% I would put both our affiliations in If I knew how.
-
-% \Address{
-%   Robert Denham\\
-%   Remote Sensing Centre\\
-%   Department of Environment and Resource Management\\
-%   GPO Box 2454\\
-%   Brisbane,
-%   Queensland, 4001, Australia\\
-%   E-mail: \email{ robert.denham@derm.qld.gov.au}
-% }
 
 %% It is also possible to add a telephone and fax number
 %% before the e-mail in the following format:
@@ -1570,6 +1568,7 @@ relatively low for an MCMC sampler. %
 \label{fig:plot_output_eg2}
 \end{figure}
 
+\newpage
 \subsection{Example 3: First order autoregressive regression}
 \label{sub:Example-3:-First}
 
@@ -1877,7 +1876,7 @@ autocorrelation plot and the trace plot for the iterates.
 \label{Flo:AR1}
 \end{figure}
 
-
+\newpage
 \section[Using PyMCMC  efficiently]{Using \pkg{PyMCMC}  efficiently}
 \label{sec:Using-PyMCMC-efficiently}
 
